# webgpu-proto

./: .gitignore  .local.vimrc  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat
src/: basic.cpp  basic.h  main.cpp  math.h  math_types.h  memory.h  platform.cpp  platform.h  program.cpp  program.h  utils.cpp  wgpu.cpp  win32.h
src/shaders/: accretion.wgsl  clouds.wgsl  fire.wgsl  fsq_basic.wgsl  starfield.wgsl  switch.wgsl
